Resolved the distorted appearance on the login/register form. Updated README.MD

--- a/restaurant/static/css/style.css
+++ b/restaurant/static/css/style.css
@@ -116,7 +116,7 @@ label {
   }
 
 input{
-    width: 80%;
+    width: 100%;
     display: block;
     padding: .5rem 1rem;
     line-height: 1.5rem;
